Can score boards now. Need to find ranges now.

--- a/catan_randomizer.css
+++ b/catan_randomizer.css
@@ -19,6 +19,11 @@ html,body{
   margin:20px auto;
   cursor: pointer;
 }
+#scores{
+  height:200px;
+  width:300px;
+  margin:20px auto;
+}
 .spacer_0{
   display:inline-block;
   margin-left:84px;
