--- a/catan_randomizer.css
+++ b/catan_randomizer.css
@@ -1,7 +1,7 @@
 html,body{
   margin:0px;
   padding:0px;
-  background-color:#eee;
+  height:100%;
 }
 .center{
   display:block;
@@ -9,14 +9,80 @@ html,body{
   text-align:center;
 }
 #scores{
-  width:300px;
+  width:100%;
   margin:20px auto;
   text-align:center;
 }
 #board{
   margin:10px auto 50px auto;
   cursor: pointer;
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  width:100%;
 }
+.tile{
+  display:block;
+}
+.subtile{
+  height:100%;
+  width:100%;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+}
+
+.grain{
+  background: url("assets/grain.png") no-repeat center;
+  background-size: contain;
+}
+.brick{
+  background: url("assets/brick.png") no-repeat center;
+  background-size: contain;
+}
+.desert{
+  background: url("assets/desert.png") no-repeat center;
+  background-size: contain;
+}
+.lumber{
+  background: url("assets/lumber.png") no-repeat center;
+  background-size: contain;
+}
+.ore{
+  background: url("assets/ore.png") no-repeat center;
+  background-size: contain;
+}
+.wool{
+  background: url("assets/wool.png") no-repeat center;
+  background-size: contain;
+}
+.linebreak{
+  width:100%;
+}
+/*
+.tile{
+
+  margin:auto;
+  height:calc(100% / 6);
+  width:calc(100% / 6);
+  margin-right:calc(100% / -30);
+  margin-bottom:calc(100% / -19);
+}
+.spacer_0{
+  margin-left:calc(100% / 4);
+}
+.spacer_3{
+  margin-left:calc(((100% / 4) - (100% / 12)) + ((100% / 6) * .07));
+}
+.spacer_7{
+  margin-left:calc(((100% / 4) - (100% / 6)) + ((100% / 6) * .15));
+}
+.spacer_12{
+  margin-left:calc(((100% / 4) - (100% / 12)) + ((100% / 6) * .07));
+}
+.spacer_16{
+  margin-left:calc(100% / 4);
+}*/
 .spacer{
   display:inline-block;
 }
@@ -29,49 +95,21 @@ html,body{
 .red{
   color:red;
 }
-@media screen and (min-width: 481px) {
-    #board{
-      width:440px;
-    }
+@media screen{
     .tile{
-      height:100px;
-      width:100px;
-      margin-right:-21px;
-      margin-bottom:-32px;
+      height:75px;
+      width:75px;
     }
-    .spacer_0{
-      margin-left:84px;
-    }
-    .spacer_3{
-      margin-left:42px;
-    }
-    .spacer_12{
-      margin-left:42px;
-    }
-    .spacer_16{
-      margin-left:84px;
+}
+@media screen and (max-width: 1024px){
+    .tile{
+      height:60px;
+      width:60px;
     }
 }
 @media screen and (max-width: 480px){
-    #board{
-      width:360px;
-    }
     .tile{
-      height:80px;
-      width:80px;
-      margin-right:-17px;
-      margin-bottom:-27px;
-    }
-    .spacer_0{
-      margin-left:66px;
-    }
-    .spacer_3{
-      margin-left:33px;
-    }
-    .spacer_12{
-      margin-left:33px;
-    }
-    .spacer_16{
-      margin-left:66px;
+      height:40px;
+      width:40px;
     }
 }
